<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.family.assignment.Register1Activity">

    <EditText
        android:id="@+id/editTextCfPw"
        android:layout_width="177dp"
        android:layout_height="35dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toRightOf="@+id/textViewCfPw"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rUsername"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

    <TextView
        android:id="@+id/textViewPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rPassword"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewCfPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rCfPassword"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPw" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rGender"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rEmail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewGender" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioButton
        android:id="@+id/radioButtonMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        app:layout_constraintLeft_toRightOf="@+id/textViewGender"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextUs" />

    <RadioButton
        android:id="@+id/radioButtonFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:text="@string/female"
        app:layout_constraintLeft_toRightOf="@+id/radioButtonMale"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextUs"
        app:layout_constraintHorizontal_bias="0.504" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="232dp"
        android:layout_height="27dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintLeft_toRightOf="@+id/textViewEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonMale" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="177dp"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintLeft_toRightOf="@+id/textViewPw"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintLeft_toRightOf="@+id/textViewUsername"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />
</android.support.constraint.ConstraintLayout>
